--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.tsx"
   },
   "dependencies": {
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@biomejs/biome": "1.2.2",
+    "@elysiajs/html": "^0.7.0",
+    "bun-types": "latest",
+    "typed-html": "^3.0.1"
   },
-  "module": "src/index.js"
+  "module": "src/index.tsx"
 }
