--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.tsx"
+    "dev": "bun run --watch src/index.tsx",
+    "start": "bun dev src/index.tsx"
   },
   "dependencies": {
-    "elysia": "latest"
+    "elysia": "latest",
+    "uncrypto": "^0.1.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.2.2",
