--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.tsx",
-    "start": "bun dev src/index.tsx"
+    "start": "bun run src/index.tsx"
   },
   "dependencies": {
     "elysia": "latest",
