--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "bun run src/index.tsx"
   },
   "dependencies": {
+    "@elysiajs/static": "^0.7.1",
     "consola": "^3.2.3",
     "elysia": "latest",
     "uncrypto": "^0.1.3"
